force-app/main/default/objects/Employee_Training__c/fields/isTrainingToday__c.field-meta.xml
<CustomField>
    <fullName>isTrainingToday__c</fullName>
    <formula>IF(TODAY() =  Training_date__c , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isTrainingToday</label>
    <type>Checkbox</type>
</CustomField>