force-app/main/default/objects/Employee_Training__c/fields/Training_date__c.field-meta.xml
<CustomField>
    <fullName>Training_date__c</fullName>
    <label>Training date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>