force-app/main/default/objects/Employee_Training__c/fields/Training_hours__c.field-meta.xml
<CustomField>
    <fullName>Training_hours__c</fullName>
    <label>Training hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>