force-app/main/default/objects/Employee_Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Compilance</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>