force-app/main/default/objects/Employee_Training__c/validationRules/EmployeeCount.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeCount</fullName>
    <active>true</active>
    <errorConditionFormula>Employee_Count__c &lt;= 0</errorConditionFormula>
    <errorMessage>Employee count must be at least one</errorMessage>
</ValidationRule>