force-app/main/default/objects/Employee_Training__c/validationRules/Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>Feedback</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Scheduled&quot;) &amp;&amp; NOT(ISBLANK(TEXT(Feedback_Rating__c))) &amp;&amp;  isTrainingToday__c = FALSE</errorConditionFormula>
    <errorMessage>Feedback cannot be entered for scheduled training.</errorMessage>
</ValidationRule>