force-app/main/default/objects/Employee_Training__c/validationRules/TrainingDuration.validationRule-meta.xml
<ValidationRule>
    <fullName>TrainingDuration</fullName>
    <active>true</active>
    <errorConditionFormula>Training_hours__c &lt;= 0</errorConditionFormula>
    <errorMessage>Training duration must be greater than zero</errorMessage>
</ValidationRule>